[package]
name = "rust-core"
version.workspace  = true   # брать из [workspace.package]
edition.workspace  = true   # брать из [workspace.package]

[lib]
name = "rust_core"
path = "src/lib.rs"
test = true

[profile.test]
debug = true

[dependencies]
thiserror   = "1.0"
mimalloc = "0.1.47"
polars-core = { version = "0.49.1", optional = true }
quick-xml = { version = "0.38.0", features = ["encoding_rs"] }
regex = "1.11.1"
tempfile    = "3.20.0"
zip         = { version = "4.3.0", default-features = false, features = ["deflate"] }

[features]
default = []
polars = ["polars-core"]
